log
  File "E:\code\scratch-detect\main.py", line 1268
    IOError, e:
              ^
SyntaxError: invalid syntax
